Revision history for Perl extension PGXN::API

0.4.2
      - The URI templates are now read from the doc root rather than the
        mirror root, so that the API-specific templates stored there will be
        visible to the app.

0.4.1   2011-03-11T23:42:38
      - Fixed a bug introduced in 0.4.0 where the /by/user and /by/tag files
        were overwriting release data from other distributions, thereby
        removing their abstracts. We now update the release data only for the
        currently-processing distribution.

0.4.0   2011-03-11T23:23:12
      - Added the "special_files" key to the distribution metadata file. It
        includes paths to `README`, `META.json`, `Changes`, `Makefile`, and
        other special files in the distribution.
      - Moved unzipped source directories under a subdirectory named for the
        distribution. That is, rather than `/src/pair-0.1.1/`, we now have
        `/src/pair/pair-0.1.1/`.
      - Make sure that the `/by/dist` file has the latest *stable* version
        listed as the version. Only make it a testing version if there is no
        stable version, and an unstabe version only if there is no stable or
        testing version.
      - Fixed bugs in release data merging in the `/by/user` and `/by/tag`
        files. The old code had relied too much on what was in the
        distribution. Since the only additional data point over the mirrored
        original is an abstract, we can just rely on the mirror data to be
        correct and add the abstract. This simplifies the code quite a bit, in
        fact.

0.3.2   2011-03-10T21:53:17
      - Updated to work with PGXN::Manager 0.10.0 output. In particular,
        "owners" are now known as "users" and "release_date" is now known as
        "date". The relevant methods and data have been chagned to reflect
        this change.

0.3.1 2011-03-10T00:28:36
      - Updated to work with PGXN::Manager 0.9.1 output.

0.3.0 2011-03-09T22:18:16