@@ -1,4 +1,4 @@
-package PGXN::API::Router v0.4.2;
+package PGXN::API::Router v0.5.0;
 
 use 5.12.0;
 use utf8;
